// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Main should match the snapshot 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Unknown
    films={
        Array [
            Object {
              "backdrop": "url",
              "movie_id": 20,
              "overview": "Best documentary ever",
              "poster_path": "url",
              "release_date": "March 5, 2006",
              "title": "Planet Earth",
              "vote_average": "1000%",
            },
          ]
    }
    user={
        Object {
            "email": "tink@gmail.com",
            "name": "TinkerBell",
            "password": "password",
          }
    }
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <Switch>
        <Route
                exact={true}
                path="/"
                render={[Function]}
        />
        <Route
                path="/login"
                render={[Function]}
        />
        <Route
                path="/sign-up"
                render={[Function]}
        />
        <Route
                path="/favorites"
                render={[Function]}
        />
</Switch>,
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <Route
            exact={true}
            path="/"
            render={[Function]}
/>,
          <Route
            path="/login"
            render={[Function]}
/>,
          <Route
            path="/sign-up"
            render={[Function]}
/>,
          <Route
            path="/favorites"
            render={[Function]}
/>,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "exact": true,
            "path": "/",
            "render": [Function],
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "path": "/login",
            "render": [Function],
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "path": "/sign-up",
            "render": [Function],
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "path": "/favorites",
            "render": [Function],
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": [Function],
    },
    "type": "main",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <Switch>
          <Route
                    exact={true}
                    path="/"
                    render={[Function]}
          />
          <Route
                    path="/login"
                    render={[Function]}
          />
          <Route
                    path="/sign-up"
                    render={[Function]}
          />
          <Route
                    path="/favorites"
                    render={[Function]}
          />
</Switch>,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <Route
              exact={true}
              path="/"
              render={[Function]}
/>,
            <Route
              path="/login"
              render={[Function]}
/>,
            <Route
              path="/sign-up"
              render={[Function]}
/>,
            <Route
              path="/favorites"
              render={[Function]}
/>,
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "exact": true,
              "path": "/",
              "render": [Function],
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "path": "/login",
              "render": [Function],
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "path": "/sign-up",
              "render": [Function],
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "path": "/favorites",
              "render": [Function],
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
        ],
        "type": [Function],
      },
      "type": "main",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`Router should display home when the exact path is / 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <MemoryRouter
    initialEntries={
        Array [
            "/",
          ]
    }
>
    <Unknown
        films={
            Array [
                Object {
                  "backdrop": "url",
                  "movie_id": 20,
                  "overview": "Best documentary ever",
                  "poster_path": "url",
                  "release_date": "March 5, 2006",
                  "title": "Planet Earth",
                  "vote_average": "1000%",
                },
              ]
        }
        user={
            Object {
                "email": "tink@gmail.com",
                "name": "TinkerBell",
                "password": "password",
              }
        }
    />
</MemoryRouter>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": <Unknown
        films={
                Array [
                        Object {
                          "backdrop": "url",
                          "movie_id": 20,
                          "overview": "Best documentary ever",
                          "poster_path": "url",
                          "release_date": "March 5, 2006",
                          "title": "Planet Earth",
                          "vote_average": "1000%",
                        },
                      ]
        }
        user={
                Object {
                        "email": "tink@gmail.com",
                        "name": "TinkerBell",
                        "password": "password",
                      }
        }
/>,
      "history": Object {
        "action": "POP",
        "block": [Function],
        "canGo": [Function],
        "createHref": [Function],
        "entries": Array [
          Object {
            "hash": "",
            "key": "l1fw8f",
            "pathname": "/",
            "search": "",
            "state": undefined,
          },
        ],
        "go": [Function],
        "goBack": [Function],
        "goForward": [Function],
        "index": 0,
        "length": 1,
        "listen": [Function],
        "location": Object {
          "hash": "",
          "key": "l1fw8f",
          "pathname": "/",
          "search": "",
          "state": undefined,
        },
        "push": [Function],
        "replace": [Function],
      },
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "films": Array [
          Object {
            "backdrop": "url",
            "movie_id": 20,
            "overview": "Best documentary ever",
            "poster_path": "url",
            "release_date": "March 5, 2006",
            "title": "Planet Earth",
            "vote_average": "1000%",
          },
        ],
        "user": Object {
          "email": "tink@gmail.com",
          "name": "TinkerBell",
          "password": "password",
        },
      },
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": <Unknown
          films={
                    Array [
                              Object {
                                "backdrop": "url",
                                "movie_id": 20,
                                "overview": "Best documentary ever",
                                "poster_path": "url",
                                "release_date": "March 5, 2006",
                                "title": "Planet Earth",
                                "vote_average": "1000%",
                              },
                            ]
          }
          user={
                    Object {
                              "email": "tink@gmail.com",
                              "name": "TinkerBell",
                              "password": "password",
                            }
          }
/>,
        "history": Object {
          "action": "POP",
          "block": [Function],
          "canGo": [Function],
          "createHref": [Function],
          "entries": Array [
            Object {
              "hash": "",
              "key": "l1fw8f",
              "pathname": "/",
              "search": "",
              "state": undefined,
            },
          ],
          "go": [Function],
          "goBack": [Function],
          "goForward": [Function],
          "index": 0,
          "length": 1,
          "listen": [Function],
          "location": Object {
            "hash": "",
            "key": "l1fw8f",
            "pathname": "/",
            "search": "",
            "state": undefined,
          },
          "push": [Function],
          "replace": [Function],
        },
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "films": Array [
            Object {
              "backdrop": "url",
              "movie_id": 20,
              "overview": "Best documentary ever",
              "poster_path": "url",
              "release_date": "March 5, 2006",
              "title": "Planet Earth",
              "vote_average": "1000%",
            },
          ],
          "user": Object {
            "email": "tink@gmail.com",
            "name": "TinkerBell",
            "password": "password",
          },
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`Router should display login when there is a user and the path is /login 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <MemoryRouter
    initialEntries={
        Array [
            "/login",
          ]
    }
>
    <Unknown
        films={
            Array [
                Object {
                  "backdrop": "url",
                  "movie_id": 20,
                  "overview": "Best documentary ever",
                  "poster_path": "url",
                  "release_date": "March 5, 2006",
                  "title": "Planet Earth",
                  "vote_average": "1000%",
                },
              ]
        }
        user={
            Object {
                "email": "tink@gmail.com",
                "name": "TinkerBell",
                "password": "password",
              }
        }
    />
</MemoryRouter>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": <Unknown
        films={
                Array [
                        Object {
                          "backdrop": "url",
                          "movie_id": 20,
                          "overview": "Best documentary ever",
                          "poster_path": "url",
                          "release_date": "March 5, 2006",
                          "title": "Planet Earth",
                          "vote_average": "1000%",
                        },
                      ]
        }
        user={
                Object {
                        "email": "tink@gmail.com",
                        "name": "TinkerBell",
                        "password": "password",
                      }
        }
/>,
      "history": Object {
        "action": "POP",
        "block": [Function],
        "canGo": [Function],
        "createHref": [Function],
        "entries": Array [
          Object {
            "hash": "",
            "key": "2ilfpu",
            "pathname": "/login",
            "search": "",
            "state": undefined,
          },
        ],
        "go": [Function],
        "goBack": [Function],
        "goForward": [Function],
        "index": 0,
        "length": 1,
        "listen": [Function],
        "location": Object {
          "hash": "",
          "key": "2ilfpu",
          "pathname": "/login",
          "search": "",
          "state": undefined,
        },
        "push": [Function],
        "replace": [Function],
      },
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "films": Array [
          Object {
            "backdrop": "url",
            "movie_id": 20,
            "overview": "Best documentary ever",
            "poster_path": "url",
            "release_date": "March 5, 2006",
            "title": "Planet Earth",
            "vote_average": "1000%",
          },
        ],
        "user": Object {
          "email": "tink@gmail.com",
          "name": "TinkerBell",
          "password": "password",
        },
      },
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": <Unknown
          films={
                    Array [
                              Object {
                                "backdrop": "url",
                                "movie_id": 20,
                                "overview": "Best documentary ever",
                                "poster_path": "url",
                                "release_date": "March 5, 2006",
                                "title": "Planet Earth",
                                "vote_average": "1000%",
                              },
                            ]
          }
          user={
                    Object {
                              "email": "tink@gmail.com",
                              "name": "TinkerBell",
                              "password": "password",
                            }
          }
/>,
        "history": Object {
          "action": "POP",
          "block": [Function],
          "canGo": [Function],
          "createHref": [Function],
          "entries": Array [
            Object {
              "hash": "",
              "key": "2ilfpu",
              "pathname": "/login",
              "search": "",
              "state": undefined,
            },
          ],
          "go": [Function],
          "goBack": [Function],
          "goForward": [Function],
          "index": 0,
          "length": 1,
          "listen": [Function],
          "location": Object {
            "hash": "",
            "key": "2ilfpu",
            "pathname": "/login",
            "search": "",
            "state": undefined,
          },
          "push": [Function],
          "replace": [Function],
        },
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "films": Array [
            Object {
              "backdrop": "url",
              "movie_id": 20,
              "overview": "Best documentary ever",
              "poster_path": "url",
              "release_date": "March 5, 2006",
              "title": "Planet Earth",
              "vote_average": "1000%",
            },
          ],
          "user": Object {
            "email": "tink@gmail.com",
            "name": "TinkerBell",
            "password": "password",
          },
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`Router should display sign-up when there is a user and the path is /sign-up 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <MemoryRouter
    initialEntries={
        Array [
            "/sign-up",
          ]
    }
>
    <Unknown
        films={
            Array [
                Object {
                  "backdrop": "url",
                  "movie_id": 20,
                  "overview": "Best documentary ever",
                  "poster_path": "url",
                  "release_date": "March 5, 2006",
                  "title": "Planet Earth",
                  "vote_average": "1000%",
                },
              ]
        }
        user={
            Object {
                "email": "tink@gmail.com",
                "name": "TinkerBell",
                "password": "password",
              }
        }
    />
</MemoryRouter>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": <Unknown
        films={
                Array [
                        Object {
                          "backdrop": "url",
                          "movie_id": 20,
                          "overview": "Best documentary ever",
                          "poster_path": "url",
                          "release_date": "March 5, 2006",
                          "title": "Planet Earth",
                          "vote_average": "1000%",
                        },
                      ]
        }
        user={
                Object {
                        "email": "tink@gmail.com",
                        "name": "TinkerBell",
                        "password": "password",
                      }
        }
/>,
      "history": Object {
        "action": "POP",
        "block": [Function],
        "canGo": [Function],
        "createHref": [Function],
        "entries": Array [
          Object {
            "hash": "",
            "key": "80hcjw",
            "pathname": "/sign-up",
            "search": "",
            "state": undefined,
          },
        ],
        "go": [Function],
        "goBack": [Function],
        "goForward": [Function],
        "index": 0,
        "length": 1,
        "listen": [Function],
        "location": Object {
          "hash": "",
          "key": "80hcjw",
          "pathname": "/sign-up",
          "search": "",
          "state": undefined,
        },
        "push": [Function],
        "replace": [Function],
      },
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "films": Array [
          Object {
            "backdrop": "url",
            "movie_id": 20,
            "overview": "Best documentary ever",
            "poster_path": "url",
            "release_date": "March 5, 2006",
            "title": "Planet Earth",
            "vote_average": "1000%",
          },
        ],
        "user": Object {
          "email": "tink@gmail.com",
          "name": "TinkerBell",
          "password": "password",
        },
      },
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": <Unknown
          films={
                    Array [
                              Object {
                                "backdrop": "url",
                                "movie_id": 20,
                                "overview": "Best documentary ever",
                                "poster_path": "url",
                                "release_date": "March 5, 2006",
                                "title": "Planet Earth",
                                "vote_average": "1000%",
                              },
                            ]
          }
          user={
                    Object {
                              "email": "tink@gmail.com",
                              "name": "TinkerBell",
                              "password": "password",
                            }
          }
/>,
        "history": Object {
          "action": "POP",
          "block": [Function],
          "canGo": [Function],
          "createHref": [Function],
          "entries": Array [
            Object {
              "hash": "",
              "key": "80hcjw",
              "pathname": "/sign-up",
              "search": "",
              "state": undefined,
            },
          ],
          "go": [Function],
          "goBack": [Function],
          "goForward": [Function],
          "index": 0,
          "length": 1,
          "listen": [Function],
          "location": Object {
            "hash": "",
            "key": "80hcjw",
            "pathname": "/sign-up",
            "search": "",
            "state": undefined,
          },
          "push": [Function],
          "replace": [Function],
        },
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "films": Array [
            Object {
              "backdrop": "url",
              "movie_id": 20,
              "overview": "Best documentary ever",
              "poster_path": "url",
              "release_date": "March 5, 2006",
              "title": "Planet Earth",
              "vote_average": "1000%",
            },
          ],
          "user": Object {
            "email": "tink@gmail.com",
            "name": "TinkerBell",
            "password": "password",
          },
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`Router should display sign-up when there is a user and the path is /sign-up 2`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <MemoryRouter
    initialEntries={
        Array [
            "/favorites",
          ]
    }
>
    <Unknown
        films={
            Array [
                Object {
                  "backdrop": "url",
                  "movie_id": 20,
                  "overview": "Best documentary ever",
                  "poster_path": "url",
                  "release_date": "March 5, 2006",
                  "title": "Planet Earth",
                  "vote_average": "1000%",
                },
              ]
        }
        user={
            Object {
                "email": "tink@gmail.com",
                "name": "TinkerBell",
                "password": "password",
              }
        }
    />
</MemoryRouter>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": <Unknown
        films={
                Array [
                        Object {
                          "backdrop": "url",
                          "movie_id": 20,
                          "overview": "Best documentary ever",
                          "poster_path": "url",
                          "release_date": "March 5, 2006",
                          "title": "Planet Earth",
                          "vote_average": "1000%",
                        },
                      ]
        }
        user={
                Object {
                        "email": "tink@gmail.com",
                        "name": "TinkerBell",
                        "password": "password",
                      }
        }
/>,
      "history": Object {
        "action": "POP",
        "block": [Function],
        "canGo": [Function],
        "createHref": [Function],
        "entries": Array [
          Object {
            "hash": "",
            "key": "qnn4x1",
            "pathname": "/favorites",
            "search": "",
            "state": undefined,
          },
        ],
        "go": [Function],
        "goBack": [Function],
        "goForward": [Function],
        "index": 0,
        "length": 1,
        "listen": [Function],
        "location": Object {
          "hash": "",
          "key": "qnn4x1",
          "pathname": "/favorites",
          "search": "",
          "state": undefined,
        },
        "push": [Function],
        "replace": [Function],
      },
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "films": Array [
          Object {
            "backdrop": "url",
            "movie_id": 20,
            "overview": "Best documentary ever",
            "poster_path": "url",
            "release_date": "March 5, 2006",
            "title": "Planet Earth",
            "vote_average": "1000%",
          },
        ],
        "user": Object {
          "email": "tink@gmail.com",
          "name": "TinkerBell",
          "password": "password",
        },
      },
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": <Unknown
          films={
                    Array [
                              Object {
                                "backdrop": "url",
                                "movie_id": 20,
                                "overview": "Best documentary ever",
                                "poster_path": "url",
                                "release_date": "March 5, 2006",
                                "title": "Planet Earth",
                                "vote_average": "1000%",
                              },
                            ]
          }
          user={
                    Object {
                              "email": "tink@gmail.com",
                              "name": "TinkerBell",
                              "password": "password",
                            }
          }
/>,
        "history": Object {
          "action": "POP",
          "block": [Function],
          "canGo": [Function],
          "createHref": [Function],
          "entries": Array [
            Object {
              "hash": "",
              "key": "qnn4x1",
              "pathname": "/favorites",
              "search": "",
              "state": undefined,
            },
          ],
          "go": [Function],
          "goBack": [Function],
          "goForward": [Function],
          "index": 0,
          "length": 1,
          "listen": [Function],
          "location": Object {
            "hash": "",
            "key": "qnn4x1",
            "pathname": "/favorites",
            "search": "",
            "state": undefined,
          },
          "push": [Function],
          "replace": [Function],
        },
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "films": Array [
            Object {
              "backdrop": "url",
              "movie_id": 20,
              "overview": "Best documentary ever",
              "poster_path": "url",
              "release_date": "March 5, 2006",
              "title": "Planet Earth",
              "vote_average": "1000%",
            },
          ],
          "user": Object {
            "email": "tink@gmail.com",
            "name": "TinkerBell",
            "password": "password",
          },
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`Router should display the home screen when a user visits login and is not logged in 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <MemoryRouter
    initialEntries={
        Array [
            "/login",
          ]
    }
>
    <Unknown
        films={
            Array [
                Object {
                  "backdrop": "url",
                  "movie_id": 20,
                  "overview": "Best documentary ever",
                  "poster_path": "url",
                  "release_date": "March 5, 2006",
                  "title": "Planet Earth",
                  "vote_average": "1000%",
                },
              ]
        }
        user={Object {}}
    />
</MemoryRouter>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": <Unknown
        films={
                Array [
                        Object {
                          "backdrop": "url",
                          "movie_id": 20,
                          "overview": "Best documentary ever",
                          "poster_path": "url",
                          "release_date": "March 5, 2006",
                          "title": "Planet Earth",
                          "vote_average": "1000%",
                        },
                      ]
        }
        user={Object {}}
/>,
      "history": Object {
        "action": "POP",
        "block": [Function],
        "canGo": [Function],
        "createHref": [Function],
        "entries": Array [
          Object {
            "hash": "",
            "key": "xolvnv",
            "pathname": "/login",
            "search": "",
            "state": undefined,
          },
        ],
        "go": [Function],
        "goBack": [Function],
        "goForward": [Function],
        "index": 0,
        "length": 1,
        "listen": [Function],
        "location": Object {
          "hash": "",
          "key": "xolvnv",
          "pathname": "/login",
          "search": "",
          "state": undefined,
        },
        "push": [Function],
        "replace": [Function],
      },
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "films": Array [
          Object {
            "backdrop": "url",
            "movie_id": 20,
            "overview": "Best documentary ever",
            "poster_path": "url",
            "release_date": "March 5, 2006",
            "title": "Planet Earth",
            "vote_average": "1000%",
          },
        ],
        "user": Object {},
      },
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": <Unknown
          films={
                    Array [
                              Object {
                                "backdrop": "url",
                                "movie_id": 20,
                                "overview": "Best documentary ever",
                                "poster_path": "url",
                                "release_date": "March 5, 2006",
                                "title": "Planet Earth",
                                "vote_average": "1000%",
                              },
                            ]
          }
          user={Object {}}
/>,
        "history": Object {
          "action": "POP",
          "block": [Function],
          "canGo": [Function],
          "createHref": [Function],
          "entries": Array [
            Object {
              "hash": "",
              "key": "xolvnv",
              "pathname": "/login",
              "search": "",
              "state": undefined,
            },
          ],
          "go": [Function],
          "goBack": [Function],
          "goForward": [Function],
          "index": 0,
          "length": 1,
          "listen": [Function],
          "location": Object {
            "hash": "",
            "key": "xolvnv",
            "pathname": "/login",
            "search": "",
            "state": undefined,
          },
          "push": [Function],
          "replace": [Function],
        },
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "films": Array [
            Object {
              "backdrop": "url",
              "movie_id": 20,
              "overview": "Best documentary ever",
              "poster_path": "url",
              "release_date": "March 5, 2006",
              "title": "Planet Earth",
              "vote_average": "1000%",
            },
          ],
          "user": Object {},
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`Router should display the home screen when a user visits login and is not logged in 2`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <MemoryRouter
    initialEntries={
        Array [
            "/sign-up",
          ]
    }
>
    <Unknown
        films={
            Array [
                Object {
                  "backdrop": "url",
                  "movie_id": 20,
                  "overview": "Best documentary ever",
                  "poster_path": "url",
                  "release_date": "March 5, 2006",
                  "title": "Planet Earth",
                  "vote_average": "1000%",
                },
              ]
        }
        user={Object {}}
    />
</MemoryRouter>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": <Unknown
        films={
                Array [
                        Object {
                          "backdrop": "url",
                          "movie_id": 20,
                          "overview": "Best documentary ever",
                          "poster_path": "url",
                          "release_date": "March 5, 2006",
                          "title": "Planet Earth",
                          "vote_average": "1000%",
                        },
                      ]
        }
        user={Object {}}
/>,
      "history": Object {
        "action": "POP",
        "block": [Function],
        "canGo": [Function],
        "createHref": [Function],
        "entries": Array [
          Object {
            "hash": "",
            "key": "saf2jv",
            "pathname": "/sign-up",
            "search": "",
            "state": undefined,
          },
        ],
        "go": [Function],
        "goBack": [Function],
        "goForward": [Function],
        "index": 0,
        "length": 1,
        "listen": [Function],
        "location": Object {
          "hash": "",
          "key": "saf2jv",
          "pathname": "/sign-up",
          "search": "",
          "state": undefined,
        },
        "push": [Function],
        "replace": [Function],
      },
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "films": Array [
          Object {
            "backdrop": "url",
            "movie_id": 20,
            "overview": "Best documentary ever",
            "poster_path": "url",
            "release_date": "March 5, 2006",
            "title": "Planet Earth",
            "vote_average": "1000%",
          },
        ],
        "user": Object {},
      },
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": <Unknown
          films={
                    Array [
                              Object {
                                "backdrop": "url",
                                "movie_id": 20,
                                "overview": "Best documentary ever",
                                "poster_path": "url",
                                "release_date": "March 5, 2006",
                                "title": "Planet Earth",
                                "vote_average": "1000%",
                              },
                            ]
          }
          user={Object {}}
/>,
        "history": Object {
          "action": "POP",
          "block": [Function],
          "canGo": [Function],
          "createHref": [Function],
          "entries": Array [
            Object {
              "hash": "",
              "key": "saf2jv",
              "pathname": "/sign-up",
              "search": "",
              "state": undefined,
            },
          ],
          "go": [Function],
          "goBack": [Function],
          "goForward": [Function],
          "index": 0,
          "length": 1,
          "listen": [Function],
          "location": Object {
            "hash": "",
            "key": "saf2jv",
            "pathname": "/sign-up",
            "search": "",
            "state": undefined,
          },
          "push": [Function],
          "replace": [Function],
        },
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "films": Array [
            Object {
              "backdrop": "url",
              "movie_id": 20,
              "overview": "Best documentary ever",
              "poster_path": "url",
              "release_date": "March 5, 2006",
              "title": "Planet Earth",
              "vote_average": "1000%",
            },
          ],
          "user": Object {},
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`Router should display the home screen when a user visits login and is not logged in 3`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <MemoryRouter
    initialEntries={
        Array [
            "/favorites",
          ]
    }
>
    <Unknown
        films={
            Array [
                Object {
                  "backdrop": "url",
                  "movie_id": 20,
                  "overview": "Best documentary ever",
                  "poster_path": "url",
                  "release_date": "March 5, 2006",
                  "title": "Planet Earth",
                  "vote_average": "1000%",
                },
              ]
        }
        user={Object {}}
    />
</MemoryRouter>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": <Unknown
        films={
                Array [
                        Object {
                          "backdrop": "url",
                          "movie_id": 20,
                          "overview": "Best documentary ever",
                          "poster_path": "url",
                          "release_date": "March 5, 2006",
                          "title": "Planet Earth",
                          "vote_average": "1000%",
                        },
                      ]
        }
        user={Object {}}
/>,
      "history": Object {
        "action": "POP",
        "block": [Function],
        "canGo": [Function],
        "createHref": [Function],
        "entries": Array [
          Object {
            "hash": "",
            "key": "9th7cj",
            "pathname": "/favorites",
            "search": "",
            "state": undefined,
          },
        ],
        "go": [Function],
        "goBack": [Function],
        "goForward": [Function],
        "index": 0,
        "length": 1,
        "listen": [Function],
        "location": Object {
          "hash": "",
          "key": "9th7cj",
          "pathname": "/favorites",
          "search": "",
          "state": undefined,
        },
        "push": [Function],
        "replace": [Function],
      },
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "films": Array [
          Object {
            "backdrop": "url",
            "movie_id": 20,
            "overview": "Best documentary ever",
            "poster_path": "url",
            "release_date": "March 5, 2006",
            "title": "Planet Earth",
            "vote_average": "1000%",
          },
        ],
        "user": Object {},
      },
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": <Unknown
          films={
                    Array [
                              Object {
                                "backdrop": "url",
                                "movie_id": 20,
                                "overview": "Best documentary ever",
                                "poster_path": "url",
                                "release_date": "March 5, 2006",
                                "title": "Planet Earth",
                                "vote_average": "1000%",
                              },
                            ]
          }
          user={Object {}}
/>,
        "history": Object {
          "action": "POP",
          "block": [Function],
          "canGo": [Function],
          "createHref": [Function],
          "entries": Array [
            Object {
              "hash": "",
              "key": "9th7cj",
              "pathname": "/favorites",
              "search": "",
              "state": undefined,
            },
          ],
          "go": [Function],
          "goBack": [Function],
          "goForward": [Function],
          "index": 0,
          "length": 1,
          "listen": [Function],
          "location": Object {
            "hash": "",
            "key": "9th7cj",
            "pathname": "/favorites",
            "search": "",
            "state": undefined,
          },
          "push": [Function],
          "replace": [Function],
        },
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "films": Array [
            Object {
              "backdrop": "url",
              "movie_id": 20,
              "overview": "Best documentary ever",
              "poster_path": "url",
              "release_date": "March 5, 2006",
              "title": "Planet Earth",
              "vote_average": "1000%",
            },
          ],
          "user": Object {},
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;